# vigilant-eureka

./: .gitignore  Cargo.toml  README.md  anchors.json  demo_config.json
.cursor/rules/: usage.mdc
.kiro/specs/underwater-positioning-system/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
examples/: formatting_demo.rs  hardware_demo.rs
src/: accuracy_validation.rs  advanced_trilateration.rs  data_validator.rs  gdop_optimization.rs  graceful_degradation.rs  high_precision.rs  kalman_filter.rs  lib.rs  main.rs  noise_filtering.rs  optimization_cache.rs  performance_monitor.rs
src/algorithms/: embedded_coordinates.rs  embedded_trilateration.rs  gdop.rs  mod.rs  precision.rs  trilateration.rs
src/api/: blocking.rs  c_api.rs  callback.rs  formatting.rs  mod.rs  nonblocking.rs  types.rs
src/core/: constants.rs  mod.rs  types.rs
src/hardware/: error.rs  i2c.rs  mock.rs  mod.rs  serial.rs  transceiver.rs
src/processing/: cache.rs  kalman.rs  mod.rs  noise.rs  parser.rs
src/utils/: config.rs  mod.rs  monitor.rs
src/validation/: accuracy.rs  data.rs  degradation.rs  error.rs  mod.rs
